--- a/main.css
+++ b/main.css
@@ -4,7 +4,13 @@
 
 body {
   font-family: Montserrat, sans-serif;
-
+}
+body {
+  background-image: url("back.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .container {
@@ -12,7 +18,6 @@ body {
   margin-left: 80px;
 }
 
-  /* Свойства ссылок */
 a {
   display: block;
   text-decoration:none;
@@ -20,12 +25,11 @@ a {
   position: relative;
 }
 
-  /* Что делать при наведении на ссылку */
+ 
 a:hover {
-  color:#FF00FF;
+  color:  #F4A460;
 }
 
-  /* Этим свойством добавляем подчеркивание через создание псевдокласса */
 a::after {
   content: '';
   position: absolute;
@@ -45,17 +49,15 @@ h2 {
   margin: 1.25em 0;
 }
 
-  /* Свойства фотографии*/
 .photo {
   border-radius: 100px;
-  /* Радиус скругления */
+ 
   border: 3px solid transparent;
-  /* Параметры рамки */
+ 
   box-shadow: 0 4px 15px 0px rgba(0, 0, 0, 0.52);
   object-fit: cover;
 }
 
-  /* Эффект наведения на картинку */
 .photo:hover {
-  border: 3px solid #4B0082;
+  border: 3px solid #EAB1AC;
 }
