--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ a {
 
  
 a:hover {
-  color:  #F4A460;
+  color:  #796878;
 }
 
 a::after {
@@ -59,5 +59,5 @@ h2 {
 }
 
 .photo:hover {
-  border: 3px solid #EAB1AC;
+  border: 3px solid #796878;
 }
